Fixed SWAPI data table overflow

--- a/components/last-level-screen/last-level-screen-style.css
+++ b/components/last-level-screen/last-level-screen-style.css
@@ -67,6 +67,7 @@
     width: 100%;
     max-width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
     transition: 0.2s ease-in 0.2s;
 }
 
@@ -77,6 +78,7 @@
     text-align: start;
     font-family: "Segoe UI", Tahoma;
     font-size: 2rem;
+    word-wrap: break-word;
 }
 
 #data-table tr td:first-child {
